# accelerator-microbenchmarks

./: Dockerfile  README.md  pyproject.toml
Ironwood/configs/collectives/: all_gather_v6e_4x4.yaml  all_reduce_v6e_4x4.yaml  all_to_all_v6e_4x4.yaml
Ironwood/configs/host_device/: comprehensive_8dev_experiments.yaml  comprehensive_experiments.yaml
Ironwood/guides/collectives/: v6e-4x4-ici-all-gather-microbenchmark.yaml  v6e-4x4-ici-all-reduce-microbenchmark.yaml  v6e-4x4-ici-all-to-all-microbenchmark.yaml
Ironwood/scripts/: run_ici_microbenchmark_full.sh
Ironwood/src/: benchmark_collectives.py  benchmark_collectives_pmap.py  benchmark_gemm.py  benchmark_hbm.py  benchmark_host_device.py  benchmark_utils.py  run_benchmark.py
accelerator_microbenchmarks/configs/: hbm_sweep.yaml  test_trace_roofline.yaml
accelerator_microbenchmarks/configs/shapes/: matrix_shapes.csv
accelerator_microbenchmarks/src/accelerator_microbenchmarks/: main.py
configs/: 2x2x1.yaml  2x2x2.yaml  4x4x4.yaml  4x4x8.yaml  attention_jax_flash.yaml  bulk_example.yaml  cop.yaml  hbm_sweep.yaml  host_device.yaml  sample.yaml  study_llm_200b.yaml  test_csv_loader.yaml  test_roofline.yaml  verify_study.yaml
docs/: DESIGN.md  DEVELOPERS.md  RATIONALE.md
src/: benchmark_ici_links.py
src/accelerator_microbenchmarks/: main.py  op_flags.yaml
src/accelerator_microbenchmarks/benchmarks/: attention.py  benchmark_loader.py  collectives.py  components.py  compute_ops.py  hbm.py  host_device.py  matmul.py
src/accelerator_microbenchmarks/core/: __init__.py  base.py  config.py  constants.py  (+2 more)
(+6 files in other folders)
