[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "accelerator_microbenchmarks"
version = "0.1.0"
description = "Clean, modular, and high-fidelity JAX microbenchmarks for TPU/GPU."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py",
    "jax[tpu]",
    "jaxlib",
    "numpy",
    "pandas",
    "pyyaml",
]

[project.scripts]
jax-bench = "accelerator_microbenchmarks.main:run_main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["accelerator_microbenchmarks*"]
